<resources>
    <string name="app_name">DashboardTheGroup</string>

    <string name="login_name">The Group Dashboard</string>
    <string name="user_name">Investor No</string>
    <string name="password">Password</string>
    <string name="login_print">or use Touch ID to login</string>
    <string name="btn_login">Login</string>
    <string name="InvestorNo">209037</string>
    <string name="Password">12345</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="market_data">بيانات السوق</string>

    <string name="market_index">10,594.13</string>
    <string name="marketindex_value">127.02</string>
    <string name="market_percentage">1.18%</string>

    <string name="market_value">442,113,551</string>
    <string name="market_volume">12,179,283</string>
    <string name="market_trade">4,395</string>



<!--    <string name="market_index">Market Index</string>
    <string name="marketindex_value">Market Index Value</string>
    <string name="market_percentage">Market Percentage</string>
    <string name="market_value">Market Value</string>
    <string name="market_volume">Market Volume</string>
    <string name="market_trade">Market Trade</string>-->




    <string name="preferred">المفضلة</string>
    <string name="symbol"> Mark </string>
    <string name="current_price"> 40.75 </string>
    <string name="percentage"> 0.12% </string>
    <string name="value"> 0.05 </string>
    <string name="symbol_ar"> الريان ب </string>
    <string name="Name_en"> Masref Al Rayan </string>


    <string name="portfolio">المحفظة</string>
    <string name="p_value">value</string>
    <string name="p_balance">Balance</string>
    <string name="p_reverne">Revenue</string>





</resources>
