<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_marginRight="5dp">

    <LinearLayout
        android:id="@+id/linear_color"
        android:weightSum="1"
        android:background="@drawable/shadow2"
        android:layout_height="48dp"
        android:layout_width="143dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            >


            <TextView
                android:textColor="@color/color_itemtext"

                android:text="@string/value"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_ChangeValue" />

            <TextView
                android:textColor="@color/color_itemtext"

                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/percentage"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_ChangePercentage" />
        </LinearLayout>


        <LinearLayout
            android:layout_height="40dp"
            android:orientation="vertical"
            android:layout_marginLeft="0dp"
            android:weightSum="1"
            android:layout_width="match_parent">


            <TextView
                android:textColor="@color/color_itemtext"

                android:textStyle="bold"
                android:text="@string/symbol_ar"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_Symbol"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:layout_gravity="right"
                android:layout_marginRight="2dp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:background="@drawable/shadow2"
        android:layout_marginLeft="2dp"
        android:layout_height="40dp"
        android:layout_width="140dp"
        android:orientation="vertical">





        <TextView
            android:text="@string/current_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_CurrentPrice"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/text_black"
            android:layout_gravity="center"
            android:layout_marginTop="7dp" />
    </LinearLayout>





</LinearLayout>
