<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="com.av.dashboardthegroup.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#9e0e30">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:id="@+id/imageView2"
                android:src="@drawable/ic_app_laucher"
                android:layout_height="100dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/login_name"
                android:textColor="@color/color_itemtext"
                android:gravity="center"
                android:id="@+id/textView"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/Investor_No"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/user_name"
                    android:backgroundTint="@color/color_itemtext"
                    android:textColor="@color/color_itemtext"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/color_itemtext"
                    android:hint="@string/password"
                    android:backgroundTint="@color/color_itemtext"
                    />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp">


            <Button
                android:id="@+id/btn_login"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:text="@string/btn_login"
                android:textAllCaps="false"
                android:layout_width="300dp"
                android:gravity="center_vertical|center_horizontal|center"
                android:layout_marginLeft="30dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/color_itemtext" />
        </FrameLayout>

    </LinearLayout>


</LinearLayout>